--- a/vignettes/a1_dataset.Rmd
+++ b/vignettes/a1_dataset.Rmd
@@ -1,6 +1,6 @@
 <!--
 %\VignetteEngine{knitr::knitr}
-%\VignetteIndexEntry{1. A data set in rrecsys}
+%\VignetteIndexEntry{1.1 A data set in rrecsys}
 -->
 
 ```{r global_options, include=FALSE}
@@ -31,7 +31,7 @@ In this case all the rating in mlLatest100k with a value larger or equal to _goo
 The output of _defineData_ is an S4 object (class _dataSet_). This would be the main input to the dispatcher in rrecsys for training a model.
 
 A _dataSet_ object can be explored with the following methods:
-```{r, eval=FALSE}
+```{r}
 # Number of times an item was rated.
 colRatings(ML)
 # Number of times a user has rated.
