--- a/vignettes/b6_wALS.Rmd
+++ b/vignettes/b6_wALS.Rmd
@@ -1,6 +1,6 @@
 <!--
 %\VignetteEngine{knitr::knitr}
-%\VignetteIndexEntry{8. Weighted Alternated Least Squares}
+%\VignetteIndexEntry{2.6 Weighted Alternated Least Squares}
 -->
 
 ```{r global_options, include=FALSE}
@@ -8,7 +8,7 @@ knitr::opts_chunk$set(echo = TRUE)
 library(rrecsys)
 data("mlLatest100k")
 ML <- defineData(mlLatest100k, minimum = .5, maximum = 5, halfStar = TRUE)
-smallML <- ML[rowRatings(ML)>=90, colRatings(ML)>=90]
+smallML <- ML[rowRatings(ML)>=250, colRatings(ML)>=150]
 setStoppingCriteria(nrLoops = 10)
 ```
 
