--- a/vignettes/c1_predictrecommend.Rmd
+++ b/vignettes/c1_predictrecommend.Rmd
@@ -1,6 +1,6 @@
 <!--
 %\VignetteEngine{knitr::knitr}
-%\VignetteIndexEntry{9. Predicting & recommending}
+%\VignetteIndexEntry{3.1 Predicting & recommending}
 -->
 
 ```{r global_options, include=FALSE}
@@ -8,7 +8,7 @@ knitr::opts_chunk$set(echo = TRUE)
 library(rrecsys)
 data("mlLatest100k")
 ML <- defineData(mlLatest100k, minimum = .5, maximum = 5, halfStar = TRUE)
-smallML <- ML[rowRatings(ML)>=90, colRatings(ML)>=90]
+smallML <- ML[rowRatings(ML)>=200, colRatings(ML)>=100]
 svd <- rrecsys(smallML, "FunkSVD", k = 10, gamma = .015, lambda = .001)
 ibknn <- rrecsys(smallML, "ibknn", neigh = 20)
 ```
