--- a/vignettes/b2_IBCF.Rmd
+++ b/vignettes/b2_IBCF.Rmd
@@ -13,7 +13,7 @@ smallML <- ML[rowRatings(ML)>=250, colRatings(ML)>=150]
 
 ## Item-based k-nearest neighbors in rrecsys
 
-Given a target user and her positively rated items, the algorithm will identify the k-most similar items for each target _a_ and will rank them according to aggregated similarities with the different targets as described by Sarwar et al. For similarity computation among two co-rated items the "adjusted cosine" is applied. This implementation is based on the implementation in recommenderlab by Michael Hahsler.
+Given a target user and her positively rated items, the algorithm will identify the k-most similar items for each target _a_ and will rank them according to aggregated similarities with the different targets as described by Sarwar et al. The similarity is measured based on three algorithms: cosine(simFunct =1), adjuted cosine(simFunct = 2) and Pearson Correlation(simFunct = 3).
 
 To train a model with this algorithm is required to define an additional argument, _neigh_ the neighborhood size.
 ```{r}
