--- a/vignettes/d1_extend.Rmd
+++ b/vignettes/d1_extend.Rmd
@@ -11,7 +11,7 @@ library(rrecsys)
 ## Extendind rrecsys (prototyping)
 
 Download binaries from GitHub and load the _“rrecsys.RProject”_ file in RStudio. Install _devtools_ package in R (install.packages("devtools"))
-Rename _“yourAlgorithm.R”_ file in "rrecsys-mastet\\R\\" folder (if it isn't renamed it won't be build).
+Rename _“yourAlgorithm.R”_ file in "rrecsys-master\\R\\" folder (if it isn't renamed it won't be build).
 
 Extending rrecsys is a 5 step procedure. On, your renamed, “yourAlgorithm.R”  file:
 
@@ -26,9 +26,9 @@ Once you have setup the class create the new object correspondingly (line 51).
 4.	Add the new entry to the registry by completing the field on line 56 to 60.
 
 5.	Complete the prediction algorithm by adding predicted values on _model@data_.
-When you want to try out your implementation use devtools::load_all(".") or on RStudio’s toolbar menu Build>Load All, so that you can start using rrecsy’s methods.
+When you want to try out your implementation use devtools::load_all(".") or on RStudio’s toolbar menu Build>Load All, so that you can start using rrecsys’s methods.
 If you need to use another library that is not on base R, you may use the library("requiredpackage") on your code but it is better if you include properly the used method in the _NAMESPACE_ file.
 
 Tip: Use as much as you can the browser() function to single step through the execution of your function. It will allow you to view the changed objects during the execution.
 
-Afteer step 5 your algorithm may be used with all the other methods available in rrecsys.
+After step 5 your algorithm may be used with all the other methods available in rrecsys.
