--- a/vignettes/d1_extend.Rmd
+++ b/vignettes/d1_extend.Rmd
@@ -8,7 +8,7 @@ knitr::opts_chunk$set(echo = TRUE)
 library(rrecsys)
 ```
 
-## Extendind rrecsys (prototyping)
+## Extending rrecsys (prototyping)
 
 Download binaries from GitHub and load the _“rrecsys.RProject”_ file in RStudio. Install _devtools_ package in R (install.packages("devtools"))
 Rename _“yourAlgorithm.R”_ file in "rrecsys-master\\R\\" folder (if it isn't renamed it won't be build).
